Fixed small browser window overflow

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 
 .main-display{
   background: url('../img/marimba.jpg');
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   height: 600px;
 }
